added all social links

--- a/index.html
+++ b/index.html
@@ -7,24 +7,45 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>CuttinScrap</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <style type="text/css">
+    <style type="text/css">
     body {
-      color: #66b2b2;
-      padding: 25vh;
-      background-color: rgba(178, 102, 102, 0.25)
+        color: #66b2b2;
+        padding: 25vh;
+        background-color: rgba(178, 102, 102, 0.25)
     }
 
     a {
-      text-decoration: none;
-      color: #66b2b2;
+        text-decoration: none;
+        color: #66b2b2;
     }
-
-  </style>
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      
+    }
+      li {
+        margin: 1rem;
+      }
+    </style>
 </head>
 
 <body>
     <h1>CuttinScrap</h1>
-    <a href="https://twitter.com/cuttinscrap"><i class="fa fa-twitter" aria-hidden="true"></i>@cuttinscrap</a>
+    <ul>
+        <li>
+            <a href="https://twitter.com/cuttinscrap"><i class="fa fa-twitter" aria-hidden="true"></i> @cuttinscrap</a>
+        </li>
+        <li>
+            <a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> @cuttin.scrap</a>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i> Cuttin Scrap</a>
+        </li>
+        <li>
+            <a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i> Cuttin Scrap</a>
+        </li>
+    </ul>
 </body>
 
 </html>
