--- a/contact/index.html
+++ b/contact/index.html
@@ -1,4 +1,24 @@
-<html lang="en"></html><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/><meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/><link rel="icon" type="image/png" href="/static/img/scissors.png"/><meta property="og:site_name"/><meta property="og:title" content="Let's Start Cuttin Scrap"/><meta property="og:description" content="When crafting from the heart, perfection is not the main goal. Here at Cuttin Scrap I push towards having fun and using what you have around the house. These projects are not meant for Muffy McPerfect Pants, but for the everyday crafter. I, Rhiannon Walker, fight Atypical Carcinoid Cancer of the lungs everyday, and use crafting as my way to let loose. Come on a journey with me, where the road is never straigh"/><meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/><meta property="og:url" content="http://www.cuttinscrap.com"/><meta property="og:published_time" content=""/><meta property="og:author" content="Rhiannon Walker"/><meta name="twitter:card" content="summary"/><meta property="fb:app_id" content="NA"/><meta name="twitter:site" content="@cuttinscrap"/><meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/><title>CuttinScrap</title><link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
+
+<html lang="en"></html>
+<head>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+  <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
+  <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
+  <meta property="og:site_name"/>
+  <meta property="og:title" content="Let's Start Cuttin Scrap"/>
+  <meta property="og:description" content="When crafting from the heart, perfection is not the main goal. Here at Cuttin Scrap I push towards having fun and using what you have around the house. These projects are not meant for Muffy McPerfect Pants, but for the everyday crafter. I, Rhiannon Walker, fight Atypical Carcinoid Cancer of the lungs everyday, and use crafting as my way to let loose. Come on a journey with me, where the road is never straigh"/>
+  <meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/>
+  <meta property="og:url" content="http://www.cuttinscrap.com"/>
+  <meta property="og:published_time" content=""/>
+  <meta property="og:author" content="Rhiannon Walker"/>
+  <meta name="twitter:card" content="summary"/>
+  <meta property="fb:app_id" content="NA"/>
+  <meta name="twitter:site" content="@cuttinscrap"/>
+  <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
+  <title>CuttinScrap</title>
+  <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112023193-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -7,4 +27,69 @@
 
   gtag('config', 'UA-112023193-1');
 </script>
-<script src="/static/js/nav.js"></script><script src="/static/js/insta.js"></script><script src="/static/js/latest_video.js"></script></head><body><div id="hero"><div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div><nav class="init"><div id="nav-btn"><div id="ham">☰</div><div id="x">X</div><div class="socials"><h6 class="title">Follow Cuttin Scrap</h6><ul><li><a href="https://twitter.com/cuttinscrap"><i class="fa fa-twitter" aria-hidden="true"></i></a></li><li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li><li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li><li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li><li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li></ul></div></div><div id="site-navigation"><ul><li> <a href="/">Home</a></li><li> <a href="/project">Project</a></li><li> <a href="/blog">Blog</a></li><li> <a href="/uses">Uses</a></li><li> <a href="/support">Support</a></li><li> <a href="/about">About</a></li><li> <a href="/contact">Contact</a></li></ul></div></nav></div><div class="card-clear" id="intro"></div><div id="content"><div class="sm-card"><h5>Contact Us</h5><p> </p><p> <a href="mailto:cuttin.scrap@gmail.com"><i class="fa fa-envelope" aria-hidden="true">Email cuttin.scrap@gmail.com</i></a></p></div></div><div id="blog-promo"></div><div class="card" id="instagram"><h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1><p><em>follow us</em></p><div id="instafeed"></div></div><footer><p><em>Share your scraps with us</em></p><div class="socials"><h6 class="title">Follow Cuttin Scrap</h6><ul><li><a href="https://twitter.com/cuttinscrap"><i class="fa fa-twitter" aria-hidden="true"></i></a></li><li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li><li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li><li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li><li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li></ul></div></footer></body>
+
+  <script src="/static/js/nav.js"></script>
+  <script src="/static/js/insta.js"></script>
+  <script src="/static/js/latest_video.js"></script>
+</head>
+<body>
+  <div id="hero">
+    <div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div>
+    <nav class="init">
+      <div id="nav-btn">
+        <div id="ham">☰</div>
+        <div id="x">X</div>
+        <div class="socials">
+          <h6 class="title">Follow Cuttin Scrap</h6>
+          <ul>
+            <li><a href="https://twitter.com/cuttinscrap"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="site-navigation">
+        <ul>
+          <li> <a href="/">Home</a></li>
+          <li> <a href="/project">Project</a></li>
+          <li> <a href="/blog">Blog</a></li>
+          <li> <a href="/uses">Uses</a></li>
+          <li> <a href="/support">Support</a></li>
+          <li> <a href="/about">About</a></li>
+          <li> <a href="/contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <div class="card-clear" id="intro">
+  </div>
+  <div id="content">
+    <div class="sm-card">
+      <h5>Contact Us</h5>
+      <p> </p>
+      <p> <a href="mailto:cuttin.scrap@gmail.com"><i class="fa fa-envelope" aria-hidden="true">Email cuttin.scrap@gmail.com</i></a></p>
+    </div>
+  </div>
+  <div id="blog-promo">
+  </div>
+  <div class="card" id="instagram">
+    <h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1>
+    <p><em>follow us</em></p>
+    <div id="instafeed"></div>
+  </div>
+  <footer>
+    <p><em>Share your scraps with us</em></p>
+    <div class="socials">
+      <h6 class="title">Follow Cuttin Scrap</h6>
+      <ul>
+        <li><a href="https://twitter.com/cuttinscrap"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+      </ul>
+    </div>
+  </footer>
+</body>
