--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
-<html lang="en"></html><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/><meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/><link rel="icon" type="image/png" href="/static/img/scissors.png"/><meta property="og:site_name"/><meta property="og:title" content="CuttinScrap"/><meta property="og:description" content="Welcome to Cuttin Scrap"/><meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/><meta property="og:url" content="http://www.cuttinscrap.com/"/><meta property="og:published_time" content="January 1, 2018"/><meta property="og:author" content="Rhiannon Walker"/><meta name="twitter:card" content="summary"/><meta property="fb:app_id" content="NA"/><meta name="twitter:site" content="@cuttinscrap"/><meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/><title>CuttinScrap</title><link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
+
+<html lang="en"></html>
+<head>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+  <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
+  <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
+  <meta property="og:site_name"/>
+  <meta property="og:title" content="CuttinScrap"/>
+  <meta property="og:description" content="Welcome to Cuttin Scrap"/>
+  <meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/>
+  <meta property="og:url" content="http://www.cuttinscrap.com/"/>
+  <meta property="og:published_time" content="January 1, 2018"/>
+  <meta property="og:author" content="Rhiannon Walker"/>
+  <meta name="twitter:card" content="summary"/>
+  <meta property="fb:app_id" content="NA"/>
+  <meta name="twitter:site" content="@cuttinscrap"/>
+  <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
+  <title>CuttinScrap</title>
+  <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112023193-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -7,13 +27,93 @@
 
   gtag('config', 'UA-112023193-1');
 </script>
-<script src="/static/js/nav.js"></script><script src="/static/js/insta.js"></script><script src="/static/js/latest_video.js"></script><script src="/static/js/blog.js"></script><script src="/static/js/blog.js"></script><script src="/static/js/blog.js"></script></head><body><div id="hero"><div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div><nav class="init"><div id="nav-btn"><div id="ham">☰</div><div id="x">X</div><div class="socials"><h6 class="title">Follow Cuttin Scrap</h6><ul><li><a href="https://twitter.com/cuttinscrap"><i class="fa fa-twitter" aria-hidden="true"></i></a></li><li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li><li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li><li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li><li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li></ul></div></div><div id="site-navigation"><ul><li> <a href="/">Home</a></li><li> <a href="/project">Project</a></li><li> <a href="/blog">Blog</a></li><li> <a href="/uses">Uses</a></li><li> <a href="/support">Support</a></li><li> <a href="/about">About</a></li><li> <a href="/contact">Contact</a></li></ul></div></nav></div><div class="card-clear" id="intro"></div><div id="content"><div class="card-clear" id="hero"></div><div class="card" id="latest_video"><h1><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i> CuttinScrap</a></h1><p><em id="youtube_title">Check out the latest video</em></p><p id="desc"></p><iframe class="video" id="youtube_video" frameborder="0" allowfullscreen=""></iframe></div></div><div id="blog-promo"><div class="card hide" id="next-project"></div><div class="card hide" id="prev-project"></div><div class="card hide" id="next-blog"></div><div class="card hide" id="prev-blog"></div></div><div class="card" id="instagram"><h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1><p><em>follow us</em></p><div id="instafeed"></div></div><footer><p><em>Share your scraps with us</em></p><div class="socials"><h6 class="title">Follow Cuttin Scrap</h6><ul><li><a href="https://twitter.com/cuttinscrap"><i class="fa fa-twitter" aria-hidden="true"></i></a></li><li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li><li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li><li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li><li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li></ul></div></footer></body><script>document.addEventListener("DOMContentLoaded", function () {
-    blog = new Blog(root='blog')
-    blog.promo(blog.next_url, '#next-blog', em='Latest Blog')
-    //- blog.promo(blog.prev_url, '#prev-blog', em='')
-})
-</script><script>document.addEventListener("DOMContentLoaded", function () {
-    blog = new Blog('project')
-    blog.promo(blog.next_url, '#next-project', em='Latest Project')
-    //- blog.promo(blog.prev_url, '#prev-project')
-})</script>
+
+  <script src="/static/js/nav.js"></script>
+  <script src="/static/js/insta.js"></script>
+  <script src="/static/js/latest_video.js"></script>
+  <script src="/static/js/blog.js"></script>
+  <script src="/static/js/blog.js"></script>
+  <script src="/static/js/blog.js"></script>
+</head>
+<body>
+  <div id="hero">
+    <div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div>
+    <nav class="init">
+      <div id="nav-btn">
+        <div id="ham">☰</div>
+        <div id="x">X</div>
+        <div class="socials">
+          <h6 class="title">Follow Cuttin Scrap</h6>
+          <ul>
+            <li><a href="https://twitter.com/cuttinscrap"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="site-navigation">
+        <ul>
+          <li> <a href="/">Home</a></li>
+          <li> <a href="/project">Project</a></li>
+          <li> <a href="/blog">Blog</a></li>
+          <li> <a href="/uses">Uses</a></li>
+          <li> <a href="/support">Support</a></li>
+          <li> <a href="/about">About</a></li>
+          <li> <a href="/contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <div class="card-clear" id="intro">
+  </div>
+  <div id="content">
+    <div class="card-clear" id="hero"></div>
+    <div class="card" id="latest_video">
+      <h1><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i> CuttinScrap</a></h1>
+      <p><em id="youtube_title">Check out the latest video</em></p>
+      <p id="desc"></p>
+      <iframe class="video" id="youtube_video" frameborder="0" allowfullscreen=""></iframe>
+    </div>
+  </div>
+  <div id="blog-promo">
+    <div class="card hide" id="next-project"></div>
+    <div class="card hide" id="prev-project"></div>
+    <div class="card hide" id="next-blog"></div>
+    <div class="card hide" id="prev-blog"></div>
+  </div>
+  <div class="card" id="instagram">
+    <h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1>
+    <p><em>follow us</em></p>
+    <div id="instafeed"></div>
+  </div>
+  <footer>
+    <p><em>Share your scraps with us</em></p>
+    <div class="socials">
+      <h6 class="title">Follow Cuttin Scrap</h6>
+      <ul>
+        <li><a href="https://twitter.com/cuttinscrap"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+      </ul>
+    </div>
+  </footer>
+</body>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+      blog = new Blog(root='blog')
+      blog.promo(blog.next_url, '#next-blog', em='Latest Blog')
+      //- blog.promo(blog.prev_url, '#prev-blog', em='')
+  })
+  
+</script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+      blog = new Blog('project')
+      blog.promo(blog.next_url, '#next-project', em='Latest Project')
+      //- blog.promo(blog.prev_url, '#prev-project')
+  })
+</script>
