--- a/uses/index.html
+++ b/uses/index.html
@@ -1,7 +1,7 @@
 
 <html lang="en"></html>
 <head>
-  <meta property="og:site_name"/>
+  <meta property="og:site_name" content="cuttinscrap.com"/>
   <meta property="og:title" content="Uses"/>
   <meta property="og:description" content="What We Use at Cuttin Scrap"/>
   <meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/>
