--- a/project/2/index.html
+++ b/project/2/index.html
@@ -1,7 +1,7 @@
 
 <html lang="en"></html>
 <head>
-  <meta property="og:site_name"/>
+  <meta property="og:site_name" content="cuttinscrap.com"/>
   <meta property="og:title" content="Crown Bag Quilt"/>
   <meta property="og:description" content="I may have given this present multiple years in a row, because it wasn’t done in time.  Also, this was my first realization at how much it cost to make a complete quilt."/>
   <meta property="og:image" content="http://www.cuttinscrap.com/static/img/projects/2/finished_a.jpg"/>
