--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,8 @@
 
 <html lang="en"></html>
 <head>
-  <meta property="og:site_name" content="cuttinscrap.com"/>
+  <meta property="og:site_name" content="Cuttin Scrap"/>
+  <meta property="og:type" content="blog"/>
   <meta property="og:title" content="About the Cuttin Scrap Family"/>
   <meta property="og:description" content="who are we"/>
   <meta property="og:image" content="www.cuttinscrap.com/static/img/projects/woodland-applique.jpg"/>
