--- a/project/1/index.html
+++ b/project/1/index.html
@@ -1,7 +1,8 @@
 
 <html lang="en"></html>
 <head>
-  <meta property="og:site_name" content="cuttinscrap.com"/>
+  <meta property="og:site_name" content="Cuttin Scrap"/>
+  <meta property="og:type" content="blog"/>
   <meta property="og:title" content="Woodland Applique"/>
   <meta property="og:description" content="When I got the news that my close friend is having a baby, I knew right away that I wanted to make a quilt for her baby shower. I was so excited to take on this task, but at the same time I was worried it would not be done in time. My previous project took me 3 years…seriously!!! That’s why I went on a search for an easy method to making a cute project."/>
   <meta property="og:image" content="www.cuttinscrap.com/static/img/projects/woodland-applique.jpg"/>
