--- a/project/3/index.html
+++ b/project/3/index.html
@@ -1,7 +1,8 @@
 
 <html lang="en"></html>
 <head>
-  <meta property="og:site_name" content="cuttinscrap.com"/>
+  <meta property="og:site_name" content="Cuttin Scrap"/>
+  <meta property="og:type" content="blog"/>
   <meta property="og:title" content="Applique Wall Hanging"/>
   <meta property="og:description" content="I am a firm believer that there are things in life that remind us of our loved ones, and even help us feel their presence when they are gone.  For my in-laws an Eagle is the representation that reminds us of Grandpa Haight.  He was a great man and I am honored that I got to know him.  I made this wall hanging to represent him flying above his cabin and forever flying in our hearts."/>
   <meta property="og:image" content="http://www.cuttinscrap.com/static/img/projects/3/finished.jpg"/>
