--- a/project/4/index.html
+++ b/project/4/index.html
@@ -1,7 +1,8 @@
 
 <html lang="en"></html>
 <head>
-  <meta property="og:site_name" content="cuttinscrap.com"/>
+  <meta property="og:site_name" content="Cuttin Scrap"/>
+  <meta property="og:type" content="blog"/>
   <meta property="og:title" content="Weighted Blanket"/>
   <meta property="og:description" content="Weighted Blankets can be used for a variety of benefits.  Anytime an adult or child needs deep pressure to assist with grounding a weighted blanket could help. The weight from the blanket helps with the release of serotonin"/>
   <meta property="og:image" content="www.cuttinscrap.com/static/img/projects/4/hqdefault.webp"/>
