--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <html lang="en"></html>
 <head>
-  <meta property="og:site_name" content="cuttinscrap.com"/>
+  <meta property="og:site_name" content="Cuttin Scrap"/>
+  <meta property="og:type" content="blog"/>
   <meta property="og:title" content="CuttinScrap"/>
   <meta property="og:description" content="Welcome to Cuttin Scrap"/>
   <meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/>
